--- a/Tp-Final-labo4/src/app/Components/follow-component/follow-component.html
+++ b/Tp-Final-labo4/src/app/Components/follow-component/follow-component.html
@@ -16,14 +16,15 @@
 
       <div class="follower-info">
         <span class="username">{{ f.username }}</span>
-        <span><strong>Mail:</strong> {{ f.email }}</span>
+        
       </div>
+<span class="email">
+  <strong>Mail:</strong>
+  <a class="profile-link" [routerLink]="['/profiles', f.id]">
+    {{ f.email }}
+  </a>
+</span>
 
-      @if (showProfileButton) {
-      <button class="go-profile-btn" [routerLink]="['/profiles', f.id]">
-        Ver perfil
-      </button>
-      }
 
     </li>
     }
@@ -48,14 +49,14 @@
 
       <div class="follower-info">
         <span class="username">{{ p.username }}</span>
-        <span><strong>Mail:</strong> {{ p.email }}</span>
       </div>
 
-      @if (showProfileButton) {
-      <button class="go-profile-btn" [routerLink]="['/profiles', p.id]">
-        Ver perfil
-      </button>
-      }
+      <span class="email">
+  <strong>Mail:</strong>
+  <a class="profile-link" [routerLink]="['/profiles', p.id]">
+    {{ p.email }}
+  </a>
+</span>
 
     </li>
     }
