Agregar AdminLocalMovie; habilitar Ver Ficha para películas locales; ajuste en goToMovie; agregar edición de películas locales

--- a/Tp-Final-labo4/src/app/Components/admin-movies/admin-movies.html
+++ b/Tp-Final-labo4/src/app/Components/admin-movies/admin-movies.html
@@ -61,11 +61,13 @@
         </div>
 
         <div class="admin-movie-actions">
-          @if (movie.tmdbId) {
           <button type="button" (click)="goToMovie(movie)">
             Ver ficha
           </button>
-          }
+
+          <button type="button" (click)="editMovie(movie)">
+            Editar
+          </button>
 
           <button type="button" (click)="toggleHidden(movie)">
             {{ movie.isHidden ? 'Mostrar' : 'Ocultar' }}
@@ -75,6 +77,8 @@
             Eliminar
           </button>
         </div>
+
+
 
       </article>
       }
